--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -22,7 +22,7 @@
 <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md space-y-6">
   <h2 class="text-2xl font-bold text-gray-800 text-center">Submit Reflection</h2>
 
-  <div class="space-y-4">
+  <form id="submit-form" class="space-y-4">
     <label for="subject-id" class="block text-sm font-medium text-gray-700">Select Subject</label>
     <select id="subject-id" class="w-full p-3 border rounded-lg" required>
       <option value="">-- Select Subject --</option>
@@ -37,11 +37,12 @@
 
     <textarea id="summary" rows="5" placeholder="Optional summary..." class="w-full p-3 border rounded-lg"></textarea>
 
-    <button id="submit-btn" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700">Submit</button>
-  </div>
+    <button type="submit" id="submit-btn" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700">Submit</button>
+  </form>
 
   <button onclick="logout()" class="w-full bg-red-500 text-white py-2 rounded-lg hover:bg-red-600">Logout</button>
 </div>
+
 
 <script>
   const token = localStorage.getItem("token");
