--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Login / Signup</title>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+<body class="bg-cover bg-center min-h-screen flex items-center justify-center"
+      style="background-image: url('/images/home.jpg');">
 
   <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md space-y-6">
     <h2 id="form-title" class="text-2xl font-bold text-center text-gray-800">Login</h2>
