--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <title>Login / Signup</title>
 </head>
 <body class="bg-cover bg-center min-h-screen flex items-center justify-center"
-      style="background-image: url('/images/home.jpg');">
+      style="background-image: url('/images/homes.jpg');">
 
   <div class="bg-white p-8 rounded-xl shadow-md w-full max-w-md space-y-6">
     <h2 id="form-title" class="text-2xl font-bold text-center text-gray-800">Login</h2>
