--- a/frontend/teacher-refs.html
+++ b/frontend/teacher-refs.html
@@ -6,7 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="config.js"></script>
 </head>
-<body class="bg-gray-100 min-h-screen p-6">
+<body class="bg-cover bg-center min-h-screen flex items-center justify-center"
+      style="background-image: url('/images/feed.jpg');">
   <div class="fixed top-4 left-4 space-x-2 z-50">
     <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">Dashboard</a>
     <button onclick="history.back()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 shadow">Back</button>
