--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -6,7 +6,8 @@
   <script src="config.js"></script>
   <title>Submit Reflection</title>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+<body class="bg-cover bg-center min-h-screen flex items-center justify-center"
+      style="background-image: url('/images/ref.jpeg');">
 
 <!-- Navigation -->
 <div class="fixed top-4 left-4 space-x-2 z-50">
