--- a/frontend/students.html
+++ b/frontend/students.html
@@ -6,7 +6,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="config.js"></script> <!-- Make sure config.js sets a global API_BASE -->
 </head>
-<body class="bg-gray-100 min-h-screen p-6">
+<body class="bg-cover bg-center min-h-screen flex items-center justify-center"
+      style="background-image: url('/images/student.jpeg');">
 
   <!-- Navigation -->
   <div class="fixed top-4 left-4 space-x-2 z-50">
