--- a/frontend/my-reflections.html
+++ b/frontend/my-reflections.html
@@ -6,7 +6,8 @@
   <script src="config.js"></script>
   <title>My Reflections</title>
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+<body class="bg-cover bg-center min-h-screen flex items-center justify-center"
+      style="background-image: url('/images/myref.jpeg');">
 <div class="fixed top-4 left-4 space-x-2 z-50">
   <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">
     Dashboard
