--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/styles.css" />
   <title>Login / Signup</title>
 </head>
 <body class="bg-cover bg-center min-h-screen flex items-center justify-center"
