--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -22,7 +22,7 @@
 
     <!-- Profile Section -->
     <div class="bg-white p-6 rounded-xl shadow space-y-4">
-      <h2 class="text-2xl font-bold text-gray-800">Profile</h2>
+      <h2 class="text-2xl font-bold text-gray-800" style="text-align: -webkit-center;">Profile</h2>
       <p id="user-name" class="text-gray-700">Name: </p>
       <p id="user-email" class="text-gray-700">Email: </p>
 
