--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,14 +34,14 @@
       </div>
 
       <button type="submit"
-              class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700 transition">
+              class="w-full bg-mauve-600 text-white py-2 rounded-lg hover:bg-mauve-700 transition">
         <span id="submit-text">Login</span>
       </button>
     </form>
 
     <p class="text-center text-sm text-gray-500">
       <span id="toggle-text">Don't have an account?</span>
-      <button id="toggle-button" class="text-blue-600 hover:underline ml-1">Sign up</button>
+      <button id="toggle-button" class="text-mauve-600 hover:underline ml-1">Sign up</button>
     </p>
   </div>
 
