--- a/frontend/students.html
+++ b/frontend/students.html
@@ -24,7 +24,7 @@
       <input type="email" id="student-email" placeholder="Email" required class="w-full p-2 border rounded" />
       <input type="password" id="student-password" placeholder="Password" required class="w-full p-2 border rounded" />
       <input type="password" id="student-confirm-password" placeholder="Confirm Password" required class="w-full p-2 border rounded" />
-      <button type="submit" class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Add Student</button>
+      <button type="submit" class="w-full bg-mauve-600 text-white py-2 rounded hover:bg-mauve-700">Add Student</button>
     </form>
 
     <!-- Student List -->
