--- a/frontend/students.html
+++ b/frontend/students.html
@@ -11,8 +11,8 @@
 
   <!-- Navigation -->
   <div class="fixed top-4 left-4 space-x-2 z-50">
-    <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">Dashboard</a>
-    <button onclick="history.back()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 shadow">Back</button>
+   <a href="dashboard.html" class="bg-mauve-600 text-white px-4 py-2 rounded hover:bg-mauve-700 shadow">Dashboard</a>
+    <button onclick="history.back()" class="bg-onyx-500 text-white px-4 py-2 rounded hover:bg-onyx-600 shadow">Back</button>
   </div>
 
   <div class="max-w-3xl mx-auto bg-white p-6 rounded-xl shadow space-y-8">
