--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -26,7 +26,7 @@
       <p id="user-name" class="text-gray-700">Name: </p>
       <p id="user-email" class="text-gray-700">Email: </p>
 
-      <button onclick="toggleEditForm()" class="bg-yellow-500 text-white px-4 py-2 rounded hover:bg-yellow-600">Edit Password</button>
+      <button onclick="toggleEditForm()" class="bg-mandrin-500 text-white px-4 py-2 rounded hover:bg-mandrin-600">Edit Password</button>
       <button onclick="logout()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">Logout</button>
 
       <!-- Password Edit Form -->
