--- a/frontend/students.html
+++ b/frontend/students.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>My Students</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/styles.css" />
   <script src="config.js"></script> <!-- Make sure config.js sets a global API_BASE -->
 </head>
 <body class="bg-cover bg-center min-h-screen flex items-center justify-center"
