--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -119,9 +119,9 @@
         </a>`;
 
       if (role === "student") {
-        container.innerHTML += button("Curriculum", "curriculum.html", "indigo");
-        container.innerHTML += button("My Reflections", "my-reflections.html", "purple");
-        container.innerHTML += button("Submit New Reflection", "submit.html", "green");
+        container.innerHTML += button("Curriculum", "curriculum.html", "brown");
+        container.innerHTML += button("My Reflections", "my-reflections.html", "brown");
+        container.innerHTML += button("Submit New Reflection", "submit.html", "brown");
       } else if (role === "teacher") {
         container.innerHTML += button("My Students", "students.html", "brown");
         container.innerHTML += button("Curriculum", "curriculum.html", "brown");
