--- a/frontend/teacher-refs.html
+++ b/frontend/teacher-refs.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>All Reflections</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/styles.css" />
   <script src="config.js"></script>
 </head>
 <body class="bg-cover bg-center min-h-screen flex items-center justify-center"
