--- a/frontend/submit.html
+++ b/frontend/submit.html
@@ -39,7 +39,7 @@
 
     <textarea id="summary" rows="5" placeholder="Optional summary..." class="w-full p-3 border rounded-lg"></textarea>
 
-    <button type="submit" id="submit-btn" class="w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700">Submit</button>
+    <button type="submit" id="submit-btn" class="w-full bg-mauve-600 text-white py-2 rounded-lg hover:bg-mauve-700">Submit</button>
   </form>
 
   <button onclick="logout()" class="w-full bg-red-500 text-white py-2 rounded-lg hover:bg-red-600">Logout</button>
