--- a/frontend/my-reflections.html
+++ b/frontend/my-reflections.html
@@ -18,7 +18,7 @@
   </button>
 </div>
 
-<div class="bg-white p-8 rounded-xl shadow-md w-full max-w-xl space-y-6">
+<div class="bg-white p-8 rounded-xl shadow-md w-full max-w-xl60 space-y-6">
   <h2 class="text-2xl font-bold text-gray-800 text-center">My Reflections</h2>
 
   <div class="mb-4">
