--- a/frontend/my-reflections.html
+++ b/frontend/my-reflections.html
@@ -10,10 +10,10 @@
 <body class="bg-cover bg-center min-h-screen flex items-center justify-center"
       style="background-image: url('/images/myref.jpeg');">
 <div class="fixed top-4 left-4 space-x-2 z-50">
-  <a href="dashboard.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 shadow">
+  <a href="dashboard.html" class="bg-mauve-600 text-white px-4 py-2 rounded hover:bg-mauve-700 shadow">
     Dashboard
   </a>
-  <button onclick="history.back()" class="bg-gray-500 text-white px-4 py-2 rounded hover:bg-gray-600 shadow">
+  <button onclick="history.back()" class="bg-onyx-500 text-white px-4 py-2 rounded hover:bg-onyx-600 shadow">
     Back
   </button>
 </div>
