--- a/frontend/teacher-refs.html
+++ b/frontend/teacher-refs.html
@@ -33,7 +33,7 @@
 
 
     <!-- Results -->
-    <div id="reflection-list" class="space-y-6"></div>
+    <div id="reflection-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"></div>
   </div>
 
   <script>
@@ -170,7 +170,7 @@
 
     for (const ref of data) {
       const card = document.createElement("div");
-      card.className = "p-6 border rounded-xl bg-gray-50 space-y-2";
+      card.className = "flex flex-col justify-between p-6 border rounded-xl bg-white shadow hover:shadow-lg transition";
 
       const chapterName = chapterMap[ref.chapter_id] || `Chapter ${ref.chapter_id}`;
       const chapterLabel = `<span class="text-mauve-900 font-medium">${chapterName}</span>`;
@@ -179,32 +179,35 @@
         ? ref.video_url
         : `${API_BASE}${ref.video_url || ""}`;
 
-      card.innerHTML = `
-        <div class="font-bold text-gray-800">Student: ${ref.email}</div>
-        <div class="text-sm text-gray-600">Chapter: ${chapterLabel}</div>
-        <div class="mt-2">
-          ${
-            safeVideoURL
-              ? `<video controls class="w-full rounded-lg">
-                   <source src="${safeVideoURL}" type="video/mp4">
-                   Your browser does not support the video tag.
-                 </video>`
-              : `<p class="text-red-500">No video available.</p>`
-          }
-        </div>
-        <p class="text-gray-800 mt-2">${ref.text_summary || "(No summary)"}</p>
-        <div class="text-xs text-gray-400">Submitted: ${new Date(ref.submitted_at).toLocaleString()}</div>
+card.innerHTML = `
+  <div class="font-bold text-gray-800">Student: ${ref.email}</div>
+  <div class="text-sm text-gray-600 mb-2">
+    Chapter: <span class="text-indigo-800 font-medium">${chapterName}</span>
+  </div>
+  ${
+    safeVideoURL
+      ? `<video controls class="w-full rounded-lg mb-2">
+           <source src="${safeVideoURL}" type="video/mp4">
+           Your browser does not support the video tag.
+         </video>`
+      : `<p class="text-red-500 mb-2">No video available.</p>`
+  }
+  <p class="text-gray-700 text-sm">${ref.text_summary || "<em class='text-gray-400'>(No summary)</em>"}</p>
+  <div class="text-xs text-gray-400 mt-1">Submitted: ${new Date(ref.submitted_at).toLocaleString()}</div>
 
-        <form class="feedback-form space-y-2 mt-4">
-          <label class="block text-sm font-medium text-gray-700">Feedback</label>
-          <select class="status w-full border px-3 py-2 rounded-lg">
-            <option value="understood" ${ref.status === "understood" ? "selected" : ""}>Understood</option>
-            <option value="needs_review" ${ref.status === "needs_review" ? "selected" : ""}>Needs Review</option>
-          </select>
-          <textarea class="comment w-full border px-3 py-2 rounded-lg" rows="2" placeholder="Comment (optional)">${ref.comment || ""}</textarea>
-          <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Submit Feedback</button>
-        </form>
-      `;
+  <hr class="my-4 border-t border-gray-300" />
+
+  <form class="feedback-form space-y-2">
+    <label class="block text-sm font-medium text-gray-700">Feedback</label>
+    <select class="status w-full border px-3 py-2 rounded-lg">
+      <option value="understood" ${ref.status === "understood" ? "selected" : ""}>Understood</option>
+      <option value="needs_review" ${ref.status === "needs_review" ? "selected" : ""}>Needs Review</option>
+    </select>
+    <textarea class="comment w-full border px-3 py-2 rounded-lg" rows="2" placeholder="Comment (optional)">${ref.comment || ""}</textarea>
+    <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Submit Feedback</button>
+  </form>
+`;
+
 
       const form = card.querySelector(".feedback-form");
       const commentInput = form.querySelector(".comment");
